Changed names of functions to be more accurate, fixed error where notifications wouldn't show up, clicking button now activates a noise three times, made AVAudioPlayer a global variable

--- a/DND2/Base.lproj/Main.storyboard
+++ b/DND2/Base.lproj/Main.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Alarm View Controller-->
         <scene sceneID="3rz-NI-uNE">
             <objects>
-                <viewController id="CJu-lb-6If" customClass="ViewController" customModule="DND2" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="CJu-lb-6If" customClass="AlarmViewController" customModule="DND2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="awX-0R-Ogf"/>
                         <viewControllerLayoutGuide type="bottom" id="dyf-Z1-u3W"/>
