Post second round of user testing.

--- a/DND2/Base.lproj/Main.storyboard
+++ b/DND2/Base.lproj/Main.storyboard
@@ -26,29 +26,29 @@
                                     <action selector="datePickerSelected:" destination="CJu-lb-6If" eventType="valueChanged" id="WvN-zQ-FJo"/>
                                 </connections>
                             </datePicker>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wwI-uk-35m">
-                                <rect key="frame" x="140" y="252" width="67" height="30"/>
-                                <state key="normal" title="Set Alarm"/>
-                                <connections>
-                                    <action selector="alarmButtonTapped:" destination="CJu-lb-6If" eventType="touchUpInside" id="DYX-Wc-uXd"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jiz-3B-KrQ">
-                                <rect key="frame" x="362" y="252" width="98" height="30"/>
+                                <rect key="frame" x="251" y="285" width="98" height="30"/>
                                 <state key="normal" title="Open Settings"/>
                                 <connections>
                                     <action selector="openSettingsButtonPressed:" destination="CJu-lb-6If" eventType="touchUpInside" id="b83-tz-xEO"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wwI-uk-35m">
+                                <rect key="frame" x="267" y="247" width="67" height="30"/>
+                                <state key="normal" title="Set Alarm"/>
+                                <connections>
+                                    <action selector="alarmButtonTapped:" destination="CJu-lb-6If" eventType="touchUpInside" id="DYX-Wc-uXd"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="gl0-RF-0hl" firstAttribute="trailing" secondItem="jiz-3B-KrQ" secondAttribute="trailing" id="21D-vs-qkv"/>
-                            <constraint firstItem="wwI-uk-35m" firstAttribute="baseline" secondItem="jiz-3B-KrQ" secondAttribute="baseline" id="3ph-dT-TNW"/>
-                            <constraint firstItem="gl0-RF-0hl" firstAttribute="leading" secondItem="wwI-uk-35m" secondAttribute="leading" id="3pl-cY-fyS"/>
-                            <constraint firstItem="jiz-3B-KrQ" firstAttribute="top" secondItem="gl0-RF-0hl" secondAttribute="bottom" constant="2" id="bM4-bo-Gtm"/>
-                            <constraint firstItem="gl0-RF-0hl" firstAttribute="top" secondItem="awX-0R-Ogf" secondAttribute="bottom" constant="14" id="fAG-gq-4Mm"/>
-                            <constraint firstItem="gl0-RF-0hl" firstAttribute="centerX" secondItem="DlD-jp-RED" secondAttribute="centerX" id="wVI-k0-d7j"/>
+                            <constraint firstItem="gl0-RF-0hl" firstAttribute="top" secondItem="awX-0R-Ogf" secondAttribute="bottom" constant="14" id="4eR-jJ-ChF"/>
+                            <constraint firstItem="wwI-uk-35m" firstAttribute="centerX" secondItem="jiz-3B-KrQ" secondAttribute="centerX" id="6xh-h4-mVP"/>
+                            <constraint firstItem="gl0-RF-0hl" firstAttribute="centerX" secondItem="wwI-uk-35m" secondAttribute="centerX" id="NUx-TX-0Xc"/>
+                            <constraint firstItem="gl0-RF-0hl" firstAttribute="centerX" secondItem="DlD-jp-RED" secondAttribute="centerX" id="ihE-f3-PLk"/>
+                            <constraint firstItem="jiz-3B-KrQ" firstAttribute="centerY" secondItem="DlD-jp-RED" secondAttribute="centerY" id="qi1-xo-klz"/>
+                            <constraint firstItem="jiz-3B-KrQ" firstAttribute="top" secondItem="wwI-uk-35m" secondAttribute="bottom" constant="8" symbolic="YES" id="vfe-YC-Qx8"/>
                         </constraints>
                     </view>
                     <connections>
