--- a/DND2/Base.lproj/Main.storyboard
+++ b/DND2/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="gl0-RF-0hl">
-                                <rect key="frame" x="140" y="34" width="320" height="216"/>
+                                <rect key="frame" x="140" y="34" width="320" height="226"/>
                                 <date key="date" timeIntervalSinceReferenceDate="490287371.16619402">
                                     <!--2016-07-15 14:56:11 +0000-->
                                 </date>
@@ -34,14 +34,14 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1YY-Ec-rZO">
-                                <rect key="frame" x="262" y="390" width="76" height="30"/>
+                                <rect key="frame" x="262" y="395" width="76" height="30"/>
                                 <state key="normal" title="Stop Alarm"/>
                                 <connections>
                                     <action selector="stopAlarm:" destination="CJu-lb-6If" eventType="touchUpInside" id="RvS-Pc-FyJ"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g63-iT-85p">
-                                <rect key="frame" x="250" y="337" width="101" height="30"/>
+                                <rect key="frame" x="250" y="340" width="101" height="30"/>
                                 <state key="normal" title="Go To Settings"/>
                                 <connections>
                                     <action selector="openSettingsButtonPressed:" destination="CJu-lb-6If" eventType="touchUpInside" id="Dgq-a4-AkY"/>
@@ -50,13 +50,15 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="1YY-Ec-rZO" firstAttribute="top" secondItem="g63-iT-85p" secondAttribute="bottom" constant="23" id="215-Vd-Um2"/>
+                            <constraint firstItem="wwI-uk-35m" firstAttribute="top" secondItem="gl0-RF-0hl" secondAttribute="bottom" constant="25" id="4r2-Uk-dty"/>
                             <constraint firstItem="wwI-uk-35m" firstAttribute="centerX" secondItem="g63-iT-85p" secondAttribute="centerX" id="5hM-Pe-Dme"/>
+                            <constraint firstItem="g63-iT-85p" firstAttribute="top" secondItem="wwI-uk-35m" secondAttribute="bottom" constant="25" id="7Xi-MU-Z8z"/>
                             <constraint firstItem="g63-iT-85p" firstAttribute="centerX" secondItem="1YY-Ec-rZO" secondAttribute="centerX" id="OXW-lN-4uI"/>
                             <constraint firstItem="gl0-RF-0hl" firstAttribute="centerX" secondItem="DlD-jp-RED" secondAttribute="centerX" id="Rv5-dM-fvl"/>
                             <constraint firstItem="wwI-uk-35m" firstAttribute="centerY" secondItem="DlD-jp-RED" secondAttribute="centerY" id="diU-xo-jBT"/>
+                            <constraint firstItem="1YY-Ec-rZO" firstAttribute="top" secondItem="g63-iT-85p" secondAttribute="bottom" constant="25" id="ejs-Xg-NNQ"/>
                             <constraint firstItem="gl0-RF-0hl" firstAttribute="centerX" secondItem="wwI-uk-35m" secondAttribute="centerX" id="exn-Ub-CBo"/>
-                            <constraint firstItem="g63-iT-85p" firstAttribute="top" secondItem="wwI-uk-35m" secondAttribute="bottom" constant="22" id="lgv-Ye-PaQ"/>
+                            <constraint firstItem="g63-iT-85p" firstAttribute="top" secondItem="wwI-uk-35m" secondAttribute="bottom" constant="25" id="fkv-9G-F0u"/>
                             <constraint firstItem="gl0-RF-0hl" firstAttribute="top" secondItem="awX-0R-Ogf" secondAttribute="bottom" constant="14" id="sa4-Pw-dOA"/>
                         </constraints>
                     </view>
